--- a/Shop_03_multiProduct/Views/Home/Index.cshtml
+++ b/Shop_03_multiProduct/Views/Home/Index.cshtml
@@ -181,7 +181,7 @@
             <div class="blog_inner">
                 <div class="blog-img">
                     <a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)"> <img src="@item.Thumb" alt="@item.ShotDesc"> </a>
-                    <div class="mask"> <a class="info" href="blog-detail.html">Read More</a> </div>
+                    <div class="mask"> <a class="info" href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Chi tiết</a> </div>
                 </div>
                 <!--blog-img-->
                 <div class="blog-info">
