--- a/Shop_03_multiProduct/Views/Article/Category.cshtml
+++ b/Shop_03_multiProduct/Views/Article/Category.cshtml
@@ -2,16 +2,22 @@
 @{
     SearchArticleResults articleList = (SearchArticleResults)ViewData["ArticleList"];
 }
-
-<div class="columns-container">
-    <div class="container" id="columns">
-        <!-- breadcrumb -->
-        <div class="breadcrumb clearfix">
-            <a class="home" href="#" title="Return to Home">Home</a>
-            <span class="navigation-pipe">&nbsp;</span>
-            <span class="navigation_page">Blog</span>
+<div class="page-heading">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="page-title">
+                    <h2>Blog</h2>
+                </div>
+            </div>
+            <!--col-xs-12-->
         </div>
-        <!-- ./breadcrumb -->
+        <!--row-->
+    </div>
+    <!--container-->
+</div>
+<div class="columns-container">
+    <div class="container" id="columns">       
         <!-- row -->
         <div class="row">
 
