--- a/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -19,7 +19,7 @@
         <div class="header-container container">
             <div class="row">
                 <div class="logo">
-                    <a href="/" title="Flavours HTML">
+                    <a href="/" title="@commonInfo.Desc">
                         <div><img src="@commonInfo.Logo" alt="@commonInfo.Name"></div>
                     </a>
                 </div>
@@ -154,37 +154,18 @@
                 </div>
                 <div class="fl-cart-contain">
                     <div class="mini-cart">
-                        <div class="basket"> <a href="shopping-cart.html"><span> 2 </span></a> </div>
+                        <div class="basket"> <a href="/product/checkout" ><span class="spN">0</span></a> </div>
                         <div class="fl-mini-cart-content" style="display: none;">
-                            <div class="block-subtitle">
-                                <div class="top-subtotal">2 items, <span class="price">$259.99</span> </div>
-                                <!--top-subtotal-->
-                                <!--pull-right-->
-                            </div>
-                            <!--block-subtitle-->
-                            <ul class="mini-products-list" id="cart-sidebar">
-                                <li class="item first">
-                                    <div class="item-inner">
-                                        <a class="product-image" title="timi &amp; leslie Sophia Diaper Bag, Lemon Yellow/Shadow White" href="#l"><img alt="timi &amp; leslie Sophia Diaper Bag, Lemon Yellow/Shadow White" src="/assets/images/product-img.jpg"></a>
-                                        <div class="product-details">
-                                            <div class="access"><a class="btn-remove1" title="Remove This Item" href="#">Remove</a> <a class="btn-edit" title="Edit item" href="#"><i class="icon-pencil"></i><span class="hidden">Edit item</span></a> </div>
-                                            <!--access-->
-                                            <strong>1</strong> x <span class="price">$179.99</span>
-                                            <p class="product-name"><a href="product-detail.html">timi &amp; leslie Sophia Diaper Bag...</a></p>
-                                        </div>
-                                    </div>
-                                </li>
-                              
-                            </ul>
-                            <div class="actions">
-                                <button class="btn-checkout" title="Checkout" type="button" onclick="window.location=checkout"><span>Đặt hàng</span></button>
-                            </div>
-                            <!--actions-->
-                        </div>
-                        <!--fl-mini-cart-content-->
+                            <div class="block-subtitle hide">
+                                <div class="top-subtotal"><span class="spN">0</span> Sp, <span id="ttSC"></span> </div>                            
+                            </div>                    
+                            <ul class="mini-products-list" id="cart-sidebar"></ul>
+                            <div class="actions cart-buttons">
+                                <a class="btn-checkout" href="/product/checkout"><span>Đặt hàng</span></a>
+                            </div>                            
+                        </div>                        
                     </div>
-                </div>
-                <!--mini-cart-->
+                </div>                
                 <div class="collapse navbar-collapse">
                     <form class="navbar-form" role="search" action="/search" method="post">
                         <div class="input-group">
